fixed sidebar-menu content so that there was no horizontal overflow scrolling on labeling interface

--- a/web/apps/labelstudio/src/pages/CreateProject/Config/Config.scss
+++ b/web/apps/labelstudio/src/pages/CreateProject/Config/Config.scss
@@ -24,18 +24,18 @@ $scroll-width: 5px;
   flex-direction: column;
 }
 
-.sidebar-menu__content > .wizard {
+.sidebar-menu__content>.wizard {
   height: calc(100% + 64px);
-  margin: -32px -40px;
+  margin: -32px;
 }
 
-.wizard > .configure {
+.wizard>.configure {
   flex: 1;
   min-height: 0;
   display: flex;
   align-items: stretch;
 
-  > * {
+  >* {
     flex: 50%;
   }
 }
@@ -284,7 +284,7 @@ $scroll-width: 5px;
 }
 
 .wizard .configure__visual {
-  > * {
+  >* {
     border-top: 1px solid var(--color-neutral-border);
     padding-top: 16px;
     margin-bottom: 16px;
@@ -301,7 +301,8 @@ $scroll-width: 5px;
     }
   }
 
-  input, select {
+  input,
+  select {
     padding: 4px 8px;
     font: inherit;
     color: inherit;
@@ -316,12 +317,12 @@ $scroll-width: 5px;
     color: var(--color-neutral-content);
   }
 
-  > p {
+  >p {
     line-height: 32px;
     color: var(--color-neutral-content-subtler);
   }
 
-  > p.configure__object-error {
+  >p.configure__object-error {
     line-height: 22px;
     margin-top: 8px;
     color: var(--color-negative-content);
@@ -585,7 +586,7 @@ $scroll-width: 5px;
 
 
   .main-view {
-    &__annotation{
+    &__annotation {
       padding: 0;
     }
   }
